--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,8 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
-  }
+    "angular": false,
+    "jjv": false
+  },
+  "curly": false
 }
